--- a/SmartLinkCrash.ini
+++ b/SmartLinkCrash.ini
@@ -1,24 +1,22 @@
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list,no-resolve
+ruleset=✅ 全球直连,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo-lite/geosite/classical/private.list
+ruleset=✅ 全球直连,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo-lite/geoip/classical/private.list,no-resolve
 ruleset=🤖 人工智能,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/classical/category-ai-chat-!cn.list
-ruleset=📺 国外媒体,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo-lite/geosite/classical/proxymedia.list
-ruleset=🌏 谷歌服务,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo-lite/geosite/classical/google.list
-ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo-lite/geosite/classical/microsoft.list
-ruleset=⚙️ 节点选择,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo-lite/geosite/classical/proxy.list
-ruleset=🐟 漏网之鱼,[]FINAL
+ruleset=📽️ 国外媒体,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo-lite/geosite/classical/proxymedia.list
+ruleset=📈 代理节点,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo-lite/geosite/classical/proxy.list
+ruleset=✅ 全球直连,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo-lite/geosite/classical/cn.list
+ruleset=✅ 全球直连,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo-lite/geoip/classical/cn.list,no-resolve
+ruleset=🔝 兜底节点,[]FINAL
 
-custom_proxy_group=⚙️ 节点选择`select`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇭🇰 通用流量`[]🇺🇲 美国流量`[]DIRECT`[]✅ 手动切换
-custom_proxy_group=🤖 人工智能`select`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]✅ 手动切换`[]⚙️ 节点选择`[]DIRECT
-custom_proxy_group=🌏 谷歌服务`select`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]✅ 手动切换`[]⚙️ 节点选择`[]DIRECT
-custom_proxy_group=Ⓜ️ 微软服务`select`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]✅ 手动切换`[]⚙️ 节点选择`[]DIRECT
-custom_proxy_group=📺 国外媒体`select`[]🇺🇲 美国流量`[]🇭🇰 通用流量`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]✅ 手动切换`[]⚙️ 节点选择`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]🇭🇰 通用流量`[]🇺🇲 美国流量`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]✅ 手动切换`[]⚙️ 节点选择`[]DIRECT
-custom_proxy_group=🎯 全球直连`select`[]DIRECT
-custom_proxy_group=🇭🇰 香港节点`url-test`( 香港 0| 香港 1)`http://www.gstatic.com/generate_204`180,,50
-custom_proxy_group=🇯🇵 日本节点`url-test`( 日本 0| 日本 1)`http://www.gstatic.com/generate_204`180,,50
-custom_proxy_group=🇺🇲 美国节点`url-test`( 美国 0| 美国 1)`http://www.gstatic.com/generate_204`180,,100
-custom_proxy_group=🇭🇰 通用流量`url-test`( 香港 - IEPL - SS/SSR - | 台湾 - IEPL - SS/SSR - | 日本 - IEPL - SS/SSR - | 新加坡 - IEPL - SS/SSR - )`http://www.gstatic.com/generate_204`180,,50
-custom_proxy_group=🇺🇲 美国流量`url-test`( 美国 - IEPL - SS/SSR - )`http://www.gstatic.com/generate_204`180,,100
-custom_proxy_group=✅ 手动切换`select`.*
+custom_proxy_group=📈 代理节点`select`[]香港节点`[]美国节点`[]通用流量`[]美国流量`[]DIRECT`[]☑️ 手动切换
+custom_proxy_group=🤖 人工智能`select`[]美国节点`[]香港节点`[]通用流量`[]美国流量`[]☑️ 手动切换`[]📈 代理节点`[]DIRECT
+custom_proxy_group=📽️ 国外媒体`select`[]美国流量`[]通用流量`[]香港节点`[]美国节点`[]☑️ 手动切换`[]📈 代理节点`[]DIRECT
+custom_proxy_group=🔝 兜底节点`select`[]通用流量`[]美国流量`[]香港节点`[]美国节点`[]☑️ 手动切换`[]📈 代理节点`[]DIRECT
+custom_proxy_group=✅ 全球直连`select`[]DIRECT
+custom_proxy_group=香港节点`url-test`( 香港 0| 香港 1)`http://www.gstatic.com/generate_204`180,,50
+custom_proxy_group=美国节点`url-test`( 美国 0| 美国 1)`http://www.gstatic.com/generate_204`180,,100
+custom_proxy_group=通用流量`url-test`( 香港 - IEPL - SS/SSR - | 台湾 - IEPL - SS/SSR - | 新加坡 - IEPL - SS/SSR - )`http://www.gstatic.com/generate_204`180,,50
+custom_proxy_group=美国流量`url-test`( 美国 - IEPL - SS/SSR - )`http://www.gstatic.com/generate_204`180,,100
+custom_proxy_group=☑️ 手动切换`select`.*
 
 enable_rule_generator=true
 overwrite_original_rules=true
