--- a/SmartLink.ini
+++ b/SmartLink.ini
@@ -1,5 +1,5 @@
-ruleset=✅ 全球直连,[]GEOSITE,private
-ruleset=✅ 全球直连,[]GEOIP,private,no-resolve
+ruleset=✅ 全球直连,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo-lite/geosite/private.list
+ruleset=✅ 全球直连,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo-lite/geoip/private.list,no-resolve
 ruleset=🤖 人工智能,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/classical/category-ai-chat-!cn.list
 ruleset=📽️ 国外媒体,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo-lite/geosite/classical/proxymedia.list
 ruleset=📈 代理节点,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo-lite/geosite/classical/proxy.list
