--- a/SmartLink.ini
+++ b/SmartLink.ini
@@ -1,10 +1,10 @@
 ruleset=✅ 全球直连,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo-lite/geosite/private.list
 ruleset=✅ 全球直连,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo-lite/geoip/private.list,no-resolve
-ruleset=🤖 人工智能,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/classical/category-ai-chat-!cn.list
+ruleset=🤖 人工智能,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/category-ai-chat-!cn.list
 ruleset=📽️ 国外媒体,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo-lite/geosite/classical/proxymedia.list
 ruleset=📈 代理节点,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo-lite/geosite/classical/proxy.list
-ruleset=✅ 全球直连,[]GEOSITE,cn
-ruleset=✅ 全球直连,[]GEOIP,CN,no-resolve
+ruleset=✅ 全球直连,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo-lite/geosite/cn.list
+ruleset=✅ 全球直连,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo-lite/geoip/cn.list,no-resolve
 ruleset=🔝 兜底节点,[]FINAL
 
 custom_proxy_group=📈 代理节点`select`[]通用节点`[]美国节点`[]DIRECT`[]☑️ 手动切换
