--- a/SmartLink.ini
+++ b/SmartLink.ini
@@ -1,11 +1,11 @@
 ruleset=✅ 全球直连,[]GEOSITE,private
 ruleset=✅ 全球直连,[]GEOIP,private,no-resolve
-ruleset=✅ 全球直连,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/category-games%40cn.list
-ruleset=🤖 人工智能,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/category-ai-!cn.list
+ruleset=✅ 全球直连,https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/meta/geo/geosite/category-games@!cn.mrs
+ruleset=🤖 人工智能,https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/meta/geo/geosite/category-ai-!cn.mrs
 ruleset=📽️ 国外媒体,https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/meta/geo-lite/geosite/youtube.mrs
 ruleset=📽️ 国外媒体,https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/meta/geo-lite/geosite/tiktok.mrs
 ruleset=📽️ 国外媒体,https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/meta/geo/geosite/category-social-media-!cn.mrs
-ruleset=📈 代理节点,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/gfw.list
+ruleset=📈 代理节点,https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/meta/geo/geosite/gfw.mrs
 ruleset=✅ 全球直连,[]GEOSITE,cn
 ruleset=✅ 全球直连,[]GEOIP,CN,no-resolve
 ruleset=🔝 兜底节点,[]FINAL
