--- a/SmartLink.ini
+++ b/SmartLink.ini
@@ -1,9 +1,11 @@
 ruleset=✅ 全球直连,[]GEOSITE,private
 ruleset=✅ 全球直连,[]GEOIP,private,no-resolve
-ruleset=✅ 全球直连,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/classical/category-games-!cn.list
-ruleset=🤖 人工智能,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/classical/category-ai-!cn.list
-ruleset=📽️ 国外媒体,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo-lite/geosite/classical/proxymedia.list
-ruleset=📈 代理节点,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo-lite/geosite/classical/proxy.list
+ruleset=✅ 全球直连,[]GEOSITE,category-games@cn
+ruleset=🤖 人工智能,[]GEOSITE,category-ai-!cn
+ruleset=📽️ 国外媒体,[]GEOSITE,youtube
+ruleset=📽️ 国外媒体,[]GEOSITE,tiktok
+ruleset=📽️ 国外媒体,[]GEOSITE,telegram
+ruleset=📈 代理节点,[]GEOSITE,gfw
 ruleset=✅ 全球直连,[]GEOSITE,cn
 ruleset=✅ 全球直连,[]GEOIP,CN,no-resolve
 ruleset=🔝 兜底节点,[]FINAL
