--- a/SmartLink.ini
+++ b/SmartLink.ini
@@ -1,6 +1,6 @@
 ruleset=✅ 全球直连,[]GEOSITE,private
 ruleset=✅ 全球直连,[]GEOIP,private,no-resolve
-ruleset=✅ 全球直连,https://github.com/DustinWin/ruleset_geodata/releases/download/mihomo-ruleset/google-cn.list
+ruleset=✅ 全球直连,clash-domain:https://github.com/DustinWin/domain-list-custom/releases/download/domains/google-cn.list,86400
 ruleset=✅ 全球直连,[]GEOSITE,games-cn
 ruleset=🤖 人工智能,[]GEOSITE,ai
 ruleset=📽️ 国外媒体,[]GEOSITE,media
