--- a/SmartLink.ini
+++ b/SmartLink.ini
@@ -1,10 +1,10 @@
-ruleset=✅ 全球直连,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo/geosite/classical/google-play%40cn.list
 ruleset=✅ 全球直连,[]GEOSITE,private
-ruleset=✅ 全球直连,[]GEOIP,private,no-resolve
+ruleset=✅ 全球直连,[]GEOSITE,google-cn
 ruleset=✅ 全球直连,[]GEOSITE,games-cn
 ruleset=🤖 人工智能,[]GEOSITE,ai
 ruleset=📽️ 国外媒体,[]GEOSITE,media
 ruleset=📈 代理节点,[]GEOSITE,tld-proxy
+ruleset=✅ 全球直连,[]GEOIP,private,no-resolve
 ruleset=🔝 兜底节点,[]FINAL
 
 custom_proxy_group=📈 代理节点`select`[]通用节点`[]美国节点`[]DIRECT`[]☑️ 手动切换
