--- a/SmartLinkMobile.ini
+++ b/SmartLinkMobile.ini
@@ -2,7 +2,7 @@ ruleset=✅ 全球直连,[]GEOSITE,private
 ruleset=✅ 全球直连,https://github.com/DustinWin/ruleset_geodata/releases/download/mihomo-ruleset/games-cn.list
 ruleset=🤖 人工智能,https://github.com/DustinWin/ruleset_geodata/releases/download/mihomo-ruleset/ai.list
 ruleset=📽️ 国外媒体,https://github.com/DustinWin/ruleset_geodata/releases/download/mihomo-ruleset/media.list
-ruleset=📈 常规代理,https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/meta/geo-lite/geosite/classical/proxy.list
+ruleset=📈 常规代理,https://github.com/DustinWin/ruleset_geodata/releases/download/mihomo-ruleset/proxy.mrs
 ruleset=✅ 全球直连,[]GEOSITE,cn
 ruleset=✅ 全球直连,[]GEOIP,private,no-resolve
 ruleset=✅ 全球直连,[]GEOIP,CN,no-resolve
